# primerprograma_solana

./: Anchor.toml
programs/primerprograma/: Cargo.toml
programs/primerprograma/src/: lib.rs
tests/: primerprograma.js
